<resources>
    <string name="app_name">방테리어</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">598266196992718</string>
    <string name="kakao_app_key">5fed5ec771e62d05f66fabe6019ca677</string>
    <string name="kakao_scheme">kakao5fed5ec771e62d05f66fabe6019ca677</string>
    <string name="kakaolink_host">kakaolink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="id_hint">name@example.com</string>
    <string name="pw_hint">password</string>
    <string name="text_login">Login</string>
    <string name="text_signup_suggest">아직 방테리어 회원이 아니신가요?</string>
    <string name="text_signup">회원가입하기</string>
    <string name="text_service_agreement">서비스이용약관 동의</string>
    <string name="text_personal_info_agreement">개인정보수집 및 활용동의</string>
    <string name="text_btn_signup">회원가입</string>
    <string name="text_user_name">사용자 이름</string>
    <string name="text_rent">임대하기</string>
    <string name="hint_search">검색어를 입력해주세요</string>
    <string name="survey_q1">당신의 연령대는?</string>
    <string name="age_twenty">20대</string>
    <string name="age_thirty">30대</string>
    <string name="age_fourty">40대</string>
    <string name="age_fifty">50대</string>
    <string name="survey_q2">당신의 취향은?</string>
    <string name="favorite_modern"><![CDATA[도시적이고 간결한 블랙&화이트]]></string>
    <string name="favorite_provence">전원적이고 아기자기한 꽃내음</string>
    <string name="favorite_north">내츄럴한 우드스타일의 실용주의</string>
    <string name="favorite_vintage">아날로그감성의 빛바랜</string>
    <string name="important_lamp">조명</string>
    <string name="important_wall">벽지</string>
    <string name="important_curtain">커튼/블라인드</string>
    <string name="important_cover">커버류(방석/침구류)</string>
    <string name="survey_q3">당신이 인테리어 할 때 가장 중요시하는 소품은?</string>
    <string name="btn_pay">결제하기</string>
    <string name="show_interior">show interior</string>
    <string name="regist_hash">regist hash</string>
    <string name="regist_post">regist post</string>
    <string name="finish">finish</string>
    <string name="message_reply">내가 쓴 글에 댓글이 등록되었습니다.</string>
    <string name="message_due">반납 일주일 전입니다.</string>
    <string name="desc_hash_tag">#태그를 입력해주세요.(최대 5개)</string>
    <string name="complete_payment">결제가 완료되었습니다.</string>
    <string name="header_product">주문소품정보</string>
    <string name="header_address">배송정보</string>
    <string name="header_rent">임대기간 선택</string>
    <string name="header_total">최종결제금액</string>
    <string name="header_payment">결제정보</string>
    <string name="scrap">스크랩</string>
    <string name="mypost">내가 쓴 글</string>
    <string name="order_username">수령인</string>
    <string name="order_phone">연락처</string>
    <string name="order_address">배송지</string>
    <string name="comment_hint">댓글을 입력해주세요</string>
    <string name="write_fragment_hint">소품명과 브랜드정보를 입력해주세요.\n사진은 최대 1개까지 업로드할 수 있습니다.</string>
    <string name="warning_password">비밀번호 7자리 이상 입력해주세요</string>
    <string name="possible_id">사용가능한 이메일입니다.</string>
    <string name="warning_id">올바르지 않은 이메일 형식입니다.</string>
    <string name="back_pressed_message">뒤로 버튼 한번 더 누르시면 종료됩니다.</string>
    
    <string name="agreement_personal_info"><![CDATA[방테리어 개인정보 취급 방침 (ver 1.0.1)
방테리어는 정보통신망 이용촉진 및 정보보호등에 관한 법률, 개인정보보호법, 통신비밀보호법, 전기통신사업법등 정보통신서비스 제공자가 준수하여야 할 관련 법령상의 개인정보보호 규정을 준수하며, 관련 법령에 의거한 개인정보 취급방침을 정하여 이용자 권익 보호에 최선을 다하고 있습니다. 본개인정보취급 방침은 회사에서 제공하는 서비스에 적용되며 다음과 같은 내용을 담고있습니다. 
수집하는 개인정보의 항목 및 수집방법
수집하는 개인정보의 항목
첫째, 회사는 회원의 가입, 원활한 고객상담 각종서비스의 제공 등을 위해 아래와 같은 최소한의 개인정보를 필수항복으로 수집하고 있습니다. 
서비스명 : 방테리어 정보제공 서비스 와 커뮤니티 서비스 
개인정보 항목 : 이메일 주소, 이름, 비밀번호, 카카오톡 정보(아이디)
서비스명 : 방테리어 임대서비스
개인정보 항목 : 이메일 주소, 이름, 비밀번호, 전화번호, 배송지정보, 대여기간, 납입금액, 대여항목
선택항목 : 환불계좌정보 (은행명, 계좌번호, 예금주명)
둘째, 서비스 이용과정이나 서비스 제공 업무처리 과정에서 아래와 같은 정보들이 자동으로 생성되거나 추가로 수집 될 수 있습니다. 
- IP Address, 쿠키, 접속로그, 방문 일시, 서비스 이용 기록, 불량 이용 기록
   셋째, 서비스 이용시 관련 법률 준수를 위해 본인인증이 필요한 경우 아래와 같은 정보들이 수집 될 수 있습니다. 
이름, 생년월일, 성별, 휴대폰번호, 아이핀번호(아이핀이용시), 내/외국인 정보
넷째, 유료서비스 이용 과정에서 아래와 같은 결제정보들이 수집 될 수 있습니다.
-신용카드 결제시 : 카드사명, 카드번호 등
- 휴대전화 결제시 : 이동전화번호, 통신사, 결제승인번호 등
- 계좌이체시 : 은행명, 계좌번호 등
나. 개인정보 수집방법
회사는 다음과 같은 방법으로 개인정보를 수집합니다.
앱 이용, 임대서비스 배송요청, 이벤트 응모, 전화, 상담, 이메일 주소
협력회사로부터의 제공
생성정보 수집 툴을 통한 수집
개인정보의 수집 및 이용목적
서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산
컨텐츠 제공, 맞춤 인테리어 제공, 물품배송또는 안내 푸쉬알림 제공, 요금결제, 요금추심
회원관리 
개인식별, 서비스의 원활한 운영에 지장을 미치는 행위 및 서비스 부정이용 행위 제재, 불만처리 등 민원처리,
신규 서비스 개발 및 마케팅에 활용
신규 서비스 개발 및 맞춤 서비스 제공, 통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 이벤트 정보 및 참여기회 제공, 접속빈도 파악, 회원의 서비스이용에 대한 통계
개인정보 제공
회사는 이용자들의 개인정보를 “2.개인정보의 수집 목적 및 이용목적”에서 고지한 범위내에서 사용하며, 이용자의 사전 동의 없이는 동 범위를 초과하여 이용하거나 원칙적으로 이용자의 개인정보를 외부에 공개하지 않습니다. 다만, 아래의 경우에는 예외로 랍니다.
– 이용자들이 사전에 공개에 동의한경우
– 법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우
-커뮤니티 공간에서 사용자들끼리의 개인정보를 공개한경우
 
회사가 제공하는 임대서비스를 통해서 주문 및 결제가 이루어진 경우 거래 당사자간의 원활한 의사소통 및 배송, 상담등 거래이행을 위하여 관련된 정보를 필요한 범위내에서 거래 당사자에게 제공합니다. 
회사는 고객에 대하여 보다 더 질 높은 서비스 제공을 위해 가. 이용자들이 사전에 공개에 동의한경우 아래와 같이 개인정보를 제공하고 있습니다. 
제공받는자 : 임대 소품 업체 
제공하는 항목 : 임대자의 이메일, 이름, 배송지주소, 전화번호, 임대기간, 임대가격, 임대 물품명 (패키지)
제공받는 자의 이용목적 : 소품임대서비스 이행
보유 및 이용기간 : 임대서비스 종료시까지
개인정보의 취급위탁
회사는 서비스 향상을 위해서 아래와 같이 개인정보를 위탁하고 있으며, 관계 법령에 따라 위탁 계약시 개인정보가 안전하게 관리 될 수 있도록 필요한 사항을 규정하고 있습니다. 회사의 개인정보 위탁처리 기관 및 위탁업무에 내용은 다음과 같습니다.
수탁업체 : 다날, (주)케이에스넷, 이니시스, KCP, 효성 FMS, LG U+, (주)KG 모빌리언스, (주)케이에스넷, 한국정보통신(주), 세틀뱅크, KVP, 올앳, 카드사(현대/롯데/KB/BC/삼성/신한/외환/하나 SK/씨티/농협/광주/전북/제주/수협)
위탁업무 내용 : 결제처리 (휴대폰, 무통장 입금, 계좌이체, 신용카드, 기타 결제수단, 환불계좌 인증)
개인정보의 보유 및 이용기간 
위탁계약 종료시까지 
개인정보 파기절차 및 방법
이용자의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 지체 없이 파기합니다. 회사의 개인정보 파기절차 및 방법은 다음과 같습니다.
가. 파기절차
- 이용자가 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB로 옮겨져(종이의 경 우 별도의 서류함) 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조)일정 기간 저장된 후 파기됩니다.
- 동 개인정보는 법률에 의한 경우가 아니고서는 보유되는 이외의 다른 목적으로 이용되지 않습니다.
나. 파기방법
- 종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.
- 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.
7. 개인정보 자동 수집 장치의 설치/운영 및 거부에 관한 사항
가. 쿠키란
- 회사는 개인화되고 맞춤화된 서비스를 제공하기 위해서 이용자의 정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다. 
- 쿠키는 APP 운영하는데 이용되는 서버가 이용자의 브라우저에게 보내는 아주 작은 텍스트 파일로 이용자 컴퓨터의 하드디스크에 저장됩니다. 이후 이용자가 APP에 방문할 경우 웹 사이트 서버는 이용자의 하드 디스크에 저장되어 있는 쿠키의 내용을 읽어 이용자의 환경설정을 유지하고 맞춤화된 서비스  를 제공하기 위해 이용됩니다.
8. 개인정보의 기술적/관리적 보호 대책
회사는 이용자들의 개인정보를 취급함에 있어 개인정보가 분실, 도난, 누출, 변조 또는 훼손되지 않도록 안전성 확보를 위하여 다음과 같은 기술적/관리적 대책을 강구하고 있습니다.
가. 비밀번호 암호화
회원 아이디(ID)의 비밀번호는 암호화되어 저장 및 관리되고 있어 본인만이 알고 있으며, 변경은 불가합니다.
나. 해킹 등에 대비한 대책
회사는 해킹이나 컴퓨터 바이러스 등에 의해 회원의 개인정보가 유출되거나 훼손되는 것을 막기 위해 최선을 다하고 있습니다. 개인정보의 훼손에 대비해서 자료를 수시로 백업하고 있고, 최신 백신프로그램을 이용하여 이용자들의 개인정보나 자료가 누출되거나 손상되지 않도록 방지하고 있으며, 암호화통신 등을 통하여 네트워크상에서 개인정보를 안전하게 전송할 수 있도록 하고 있습니다. 그리고 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있으며, 기타 시스템적으로 보안성을 확보하기 위한 가능한 모든 기술적 장치를 갖추려 노력하고 있습니다.
다. 취급 직원의 최소화 및 교육
회사의 개인정보관련 취급 직원은 담당자에 한정시키고 있고 이를 위한 별도의 비밀번호를 부여하여 정기적으로 갱신하고 있으며, 담당자에 대한 수시 교육을 통하여 개인정보취급방침의 준수를 항상 강조하고 있습니다.
라. 개인정보보호전담기구의 운영
사내 개인정보보호전담기구 등을 통하여 개인정보취급방침의 이행사항 및 담당자의 준수여부를 확인하여 문제가 발견될 경우 즉시 수정하고 바로 잡을 수 있도록 노력하고 있습니다. 단, 회사가 개인정보보호 의무를 다 하였음에도 불구하고 이용자 본인의 부주의나 회사가 관리하지 않는 영역에서의 사고 등 회사의 귀책에 기인하지 않은 손해에 대해서는 회사는 책임을 지지 않습니다.
9. 개인정보관리책임자 및 담당자의 연락처
귀하께서는 회사의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 개인정보관리책임자 혹은 담당부서로 신고하실 수 있습니다. 회사는 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다.
개인정보 관리 책임자
이 름 장유라.
소 속 기획
전 화 010-2232-9721
메 일 bangadmin@naver.com
기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.
개인정보침해신고센터 ( http://privacy.kisa.or.kr / 국번없이 118 )
대검찰청 사이버수사과 ( http://www.spo.go.kr / 국번없이 1301 )
경찰청 사이버안전국 ( http://www.ctrc.go.kr / 국번없이 182 )
10. 고지의 의무
현 개인정보취급방침 내용 추가, 삭제 및 수정이 있을 시에는 개정 최소 7일전부터 홈페이지의 ‘공지사항’을 통해 고지할 것입니다. 다만, 개인정보의 수집 및 활용, 제3자 제공 등과 같이 이용자 권리의 중요한 변경이 있을 경우에는 최소 30일 전에 고지합니다.
- 공고일자 : 2016년 02월 12일
- 시행일자 : 2016년 02월 19일]]></string>
    
    <string name="terms_of_service"><![CDATA["방테리어" 서비스 이용약관

제 1조(목적)이 약관은 방테리어(이하 "회사")가 제공하는 어플 서비스 (이하 "서비스")의 이용과 관련하여 회사와 회원과의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정하는데 그 목적이 있습니다.



제2조 (정의)이 약관에서 사용하는 용어의 정의는 다음 각 항과 같으며, 정의되지 않은 용어에 대한 해석은 관계법령 및 서비스 어플리케이션 내 별도 안내에서 정하는 바에 따릅니다.

1."서비스"라 함은 단말기를 이용하는 회원이 인테리어 관련 정보들을 볼 수 있는 컨텐츠와 소품구매 또는 소품임대를 할 수 있는 서비스를 의미합니다.

2."회원"이라 함은 회사의 모바일 서비스 application program을 다운 받아 본 약관에 동의 후 이용계약을 체결하고, 서비스에 정상적으로 가입되어 "서비스"를 이용하는 고객을 의미합니다.

3."어플"이라 함은 회사가 서비스를 위해 개발한 "어플" 스마트폰 어플리케이션을 말합니다.

4."컨텐츠"라 함은 회원이 방테리어가 제공하는 인테리어 정보들에 대한 것을 의미합니다.

5."소품구매","소품임대"라 함은 회원이 방테리어가 제공해준 소품들을 구매하고 임대할 수 있음을 말합니다.



제3조 (약관의 효력과 개정)

1.본 약관은 서비스 화면에 게시하여 회원에게 공지 함으로써 효력이 발생합니다.

2.회사는 "약관의 규제에 관한 법률", "정보통신망 이용 촉진 및 정보보호 등에 관한법률"등 관련법을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.

3.본 약관은 필요 시 개정될 수 있으며 약관을 개정하고자 할 경우, 회사는 개정된 약관을 적용일자 및 개정사유를 명시하여 헌행약관과 함께 그 개정약관의 적용일자 14일 이전부터 적용일자 전일까지 공지합니다. 개정약관의 공지는 규정된 방법 중 1가지 이용의 방법으로 회원에게 명확하게 공지하도록 합니다.

4.서비스 내 게시

5.회사가 정한 기타 공지 방법 등

6.회사가 전항에 따라 개정약관을 공지 또는 통지하면서 회원에게 30일 기간 내에 의사표시를 하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 명확하게 공지 또는 통지하였음에도 회원과 사용자가 명시적으로 거부의 의사표시를 하지 아니한 경우 회원은 개정약관에 동의한 것으로 봅니다.



제4조 (회원가입)

1.이용자는 "방테리어"가 제공하는 시작 페이지에서 서비스 이용 약관에 동의한 후 방테리어의 회원이 됩니다.



제5조 (어플 서비스의 제공)회사가 본 약관에 정해진 바에 따라 회원에게 제공하는 서비스는 다음 각 호와 같으며 서비스를 이용하고자 하는 고객은 본 약관에 정해진 절차를 거쳐 가입하여 방테리어의 회원이 됩니다.

1.방테리어의 분위기 별 컨텐츠를 볼 수 있으며 친구에게 인테리어 사진을 공유하고 스크랩할 수 있습니다.

2.방테리어 사용 유저들과 커뮤니티를 할 수 있습니다.

3.유저들과 소통하며 서로 댓글을 달 수 있습니다.

4.인테리어 컨텐츠를 보며 마음에 드는 소품이 있을 경우 소품을 구매할 수 있습니다.

5.인테리어 소품을 묶어 월정액제 패키지로 임대할 수 있습니다.
]]></string>

    <string name="warning_rental">주문정보를 다시 확인해주세요.</string>
</resources>
