<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sony.banteriorprototype.login.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="143dp"
        android:layout_height="196dp"
        android:id="@+id/image_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="19.5dp"
        android:src="@drawable/login_logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_id"
        android:layout_below="@+id/image_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/id_hint"
        android:background="@drawable/textfield_login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_password"
        android:hint="@string/pw_hint"
        android:layout_below="@+id/edit_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23.5dp" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        android:id="@+id/btn_login"
        android:layout_marginTop="23.5dp"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        android:text="@string/text_login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kakao"
        android:id="@+id/btn_kakao"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="44.5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup_suggest"
        android:id="@+id/text_suggest"
        android:layout_below="@+id/btn_kakao"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup"
        android:id="@+id/text_signup"
        android:layout_below="@+id/btn_kakao"
        android:layout_toRightOf="@+id/text_suggest"
        android:layout_toEndOf="@+id/text_suggest" />

</RelativeLayout>
