<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sony.banteriorprototype.login.AgreementActivity">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_service_agreement"
        android:id="@+id/check_service"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/check_service_top_margin"
        android:checked="false" />

    <ScrollView
        android:layout_width="@dimen/join_box_width"
        android:layout_height="@dimen/join_box_height"
        android:id="@+id/scrollView"
        android:layout_below="@+id/check_service"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fillViewport="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terms_of_service"
            android:id="@+id/textView" />
    </ScrollView>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_personal_info_agreement"
        android:id="@+id/check_personal"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="@dimen/check_personal_top_margin" />

    <ScrollView
        android:layout_width="@dimen/join_box_width"
        android:layout_height="@dimen/join_box_height"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/check_personal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/agreement_personal_info"
            android:id="@+id/textView2" />
    </ScrollView>

</RelativeLayout>
